--- a/templates/navigator.html
+++ b/templates/navigator.html
@@ -1,12 +1,12 @@
 {% block navigator %}
 <div class="bar">
     <div class="navigator">
-        <!-- student -->
-        <a href="/student/tagittest">Add wish</a>
-        <a href="/student/mywishes">My wishes</a>
         <!-- group -->
-        <a href="/group/allgroups">Browse groups</a>
+        <a href="/group/allgroups">Groups</a>
         <!-- prototype -->
+        <a href="/prototype/group/graph">Graph(Group)</a>
+        <a href="/prototype/generate">Generate</a>
+        <a href="/prototype/populate">Populate</a>
         <a href="/prototype/intrude">Intrude</a>
         <a href="/prototype/leave">Leave</a>
     </div>
