--- a/templates/navigator.html
+++ b/templates/navigator.html
@@ -2,13 +2,13 @@
 <div class="bar">
     <div class="navigator">
         <!-- group -->
-        <a href="/group/allgroups">Groups</a>
+        <div class="button"><a href="/group/allgroups">Groups</a></div>
         <!-- prototype -->
-        <a href="/prototype/group/graph">Graph(Group)</a>
-        <a href="/prototype/generate">Generate</a>
-        <a href="/prototype/populate">Populate</a>
-        <a href="/prototype/intrude">Intrude</a>
-        <a href="/prototype/leave">Leave</a>
+        <div class="button"><a href="/prototype/group/graph">Graph(Group)</a></div>
+        <div class="button"><a href="/prototype/generate">Generate</a></div>
+        <div class="button"><a href="/prototype/populate">Populate</a></div>
+        <div class="button"><a href="/prototype/intrude">Intrude</a></div>
+        <div class="button"><a href="/prototype/leave">Leave</a></div>
     </div>
 </div>
 {% endblock %}
