--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -43,8 +43,7 @@ body {
     text-decoration: underline;
     cursor: pointer;
 
-
-    margin: 0.3em;
+    margin: 0.1em;
     padding: 0.4em 0.75em 0.4em 0.75em;
     border-radius: 0em 0.4em 0em 0.4em;
     -moz-border-radius: 0em 0.4em 0em 0.4em;
@@ -106,7 +105,7 @@ body {
 .tag {
     display: inline-block;
     padding: 0.4em 0.4em 0.4em 0.4em;
-    margin: 0.3em 0em 0.3em 0em;
+    margin: 0.15em;
     border: none;
     background-color: rgba(200, 100, 50, 0.25);
     border-radius: 0.2em;
@@ -212,20 +211,18 @@ body {
         padding: 0.5em;
         background-color: #111;
 
-        .button {
-            cursor: pointer;
-
-            a {
+        a {
                 text-decoration: none;
                 color: #CCC;
                 margin-right: 2em;
-            }
         }
-    }
 
+
+    }
 
     .status {
         position: fixed;
+        text-align: center;
         top: 1em;
         right: 1em;
         display: inline;
@@ -235,6 +232,11 @@ body {
         padding: 0.5em;
         background-color: #111;
         color: white;
+
+        .portrait {
+            padding: 0.75em;
+        }
+
     }
 
 }
