--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -15,6 +15,25 @@ body {
         color: rgb( 192, 128, 64 );
     }
 
+    h1 {
+        font-family: "Georgia", serif;
+        font-style: italic;
+    }
+
+    h2 {
+        font-family: "Georgia", serif;
+        font-style: italic;
+        padding: 0em 0em 1em 0em;
+        margin: 0em;
+    }
+
+    h3 {
+        font-family: "Georgia", serif;
+        font-style: italic;
+        padding: 0em 0em 1em 0em;
+        margin: 0em;
+    }
+
 
     .content {
         /* visuals */
@@ -75,22 +94,56 @@ body {
 
 .group {
     margin: 0.5em;
-    padding: 0.5em;
+    padding: 0.75em 0.75em 0.75em 0.75em;
+    padding-bottom: 4em;
     border-radius: 0.2em;
     -moz-border-radius: 0.2em;
     border: 0.1em solid rgba( 0, 0, 0, 0.1 );
+    position: relative;
     overflow: auto;
 
     .number {
+        position: absolute;
+        bottom: 0.3em;
+        right: 0.3em;
         float: right;
-        font-size: 3.2em;
+        font-size: 2.8em;
         font-style: italic;
         font-family: "Georgia", serif;
         font-weight: bold;
-        color: rgba( 0, 0, 0, 0.15 );
-        padding: 0em, 1em, 0.1em, 0em;
-        margin-right: 0.2em;
+        color: rgba( 0, 0, 0, 0.1 );
     }
+
+    .controls {
+        top: 0.2em;
+        right: 0.2em;
+        position: absolute;
+
+        .control {
+            display: inline-block;
+            position: relative;
+            padding: 0.2em;
+            font-size: 0.8em;
+            padding: 0.25em;
+            background-color: rgba( 0, 0, 0, 0.1 );
+            border-radius: 0.2em;
+            -moz-border-radius: 0.2em;
+            cursor: pointer;
+
+            a {
+                text-decoration: none;
+                color: black;
+            }
+
+        }
+
+        .control#leave {}
+
+        .control#inspect {}
+
+    }
+
+
 
 }
 
@@ -137,6 +190,10 @@ body {
     .oracles {}
     .groups{
         overflow: hidden;
+
+        .leave {
+            float: right;
+        }
     }
 
 /* creation forms */
@@ -187,6 +244,18 @@ body {
 
 .bubble {
     float: left;
+}
+
+ul.ui-autocomplete {
+    background-color: rgba( 255, 255, 255, 0.75 );
+}
+
+.tagit#mytags {
+    border: 0.1em solid rgba( 255, 0, 0, 0.5 );
+    border-bottom: 0.25em solid rgba( 192, 0, 0, 1 );
+    background-image: url('http://subtlepatterns.com/patterns/light_noise_diagonal.png');
+
+    padding: 0.4em;
 }
 
 .bar {
@@ -241,13 +310,20 @@ body {
 
 }
 
+.graph {
+    margin: 1em;
+    text-align: center;
+    background-color: rgba( 0, 0, 0, 0.1 );
+    border: 0.08em dotted rgba( 0, 0, 0, 0.1 );
+}
+
 .greeting {
     padding: 1em;
 }
 
 .column_container {
 
-    overflow: auto;
+    overflow: hidden;
 
     .title {
         font-size: 4em;
@@ -256,20 +332,37 @@ body {
     }
 
     .column {
-        width: 38%;
         text-align: left;
-        float: left;
         border: 0.2em solid rgba( 0, 0, 0, 0.1 );
         padding: 1em;
         margin: 0.75em;
         background-color: rgba( 0, 0, 0, 0.05 );
         border-radius: 0.2em;
         -moz-border-radius: 0.2em;
-        max-width: 90%;
+
     }
 
     .column#tagit {
-        width: 100%;
+        width: 92.5%;
+    }
+
+    .column#group {
+        float: left;
+        position: relative;
+        width: 43%;
+        display: inline;
+    }
+
+    .column#wish {
+        float: left;
+        width: 43%;
+        display: inline;
+    }
+
+    .column#oracle {
+        width: 93%;
+        float: left;
+        display: block;
     }
 
     .help {
