--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -35,6 +35,12 @@ body {
         margin: 0em;
     }
 
+    .logo {
+        font-size: 4em;
+        font-weight: bold;
+        font-family: sans-serif;
+    }
+
 
     .content {
         /* visuals */
@@ -314,11 +320,6 @@ body {
 
 .column_container {
 
-    .title {
-        font-size: 4em;
-        font-weight: bold;
-        text-align: left;
-    }
 
     .column {
         width: auto;
@@ -326,16 +327,40 @@ body {
         display: block;
         border: 0.2em solid rgba( 0, 0, 0, 0.1 );
         padding: 1em;
+        padding-top: 3.5em;
         margin: 0.75em;
         background-color: rgba( 0, 0, 0, 0.05 );
         border-radius: 0.2em;
         -moz-border-radius: 0.2em;
+        position: relative;
+
+        .title {
+            font-size: 1.5em;
+            font-weight: bold;
+            font-family: "Georgia", serif;
+            font-style: italic;
+            padding: 0em 1em 1em 0em;
+            margin: 0em;
+            border-radius: 0em 0em 0em 0.5em;
+            -moz-border-radius: 0em 0em 0em 0.5em;
+            background-color: rgba( 0, 0, 0, 0.1 );
+            padding: 0.5em;
+            position: absolute;
+            top: 0;
+            right: 0;
+            clear: both;
+
+        }
 
     }
 
     .column#tagit {
         ul.ui-autocomplete {
             background-color: rgba( 255, 255, 255, 0.75 );
+        }
+
+        tagit-new {
+            background-color: rgba( 0, 0, 0, 0.0 )
         }
 
         .tagit#mytags {
