--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -265,6 +265,7 @@ body {
     -moz-border-radius: 0.5em;
     padding: 0.5em;
     background-color: #111;
+    z-index: 255;
 
     .navigation {
         position: fixed;
@@ -383,6 +384,17 @@ body {
             border-radius: 0.5em;
             -moz-border-radius: 0.5em;
             background-color: rgba( 0, 0, 0, 0.1 );
+        }
+
+        .tag {
+            display: inline-block;
+            padding: 0.4em 0.4em 0.4em 0.4em;
+            margin: 0.15em;
+            border: none;
+            background-color: rgba(200, 100, 50, 1.0);
+            border-radius: 0.2em;
+            -moz-border-radius: 0.2em;
+            cursor: pointer;
         }
         
     }
