leaving group; minor abstract view changes

--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -171,7 +171,16 @@ body {
     border-radius: 0.2em;
     -moz-border-radius: 0.2em;
     cursor: pointer;
+    
+    .score {
+        font-family: monospace;
+        font-size: 0.8em;
+        float: right;
+    }
+    
 }
+
+
 
 
 /* containers */
@@ -366,12 +375,14 @@ body {
             cursor: text;
             
             ul.ui-autocomplete {
-                background-color: rgba( 255, 255, 255, 0.75 );
+                background-color: rgba( 255, 255, 255, 0.75 );                
             }
-
+            
             .tagit-input {
                 background-color: rgba( 0, 0, 0, 0.0 )
-            }            
+            }
+
+            
             
         }
         
