--- a/static_base/stylesheets/jquery.tagit.css
+++ b/static_base/stylesheets/jquery.tagit.css
@@ -50,6 +50,6 @@ ul.tagit input[type="text"] {
     margin: 0;
     padding: 0;
     width: inherit;
-    background-color: none;
+    background-color: rgba( 0, 0, 0, 0 );
     outline: none;
 }
