--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -138,6 +138,7 @@ body {
         border-radius: 0.2em;
         -moz-border-radius: 0.2em;
         cursor: pointer;
+        z-index: 255;
 
         a {
             text-decoration: none;
