database performance and performance mapping
tested out database in order to see if the graph framework lags behind and by how much; mapped some performance on a single dataset

jaccard seems to be outliving itself as the distance function; buckets will need more flexibility

--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -387,14 +387,16 @@ body {
         }
         
         input[type=submit] {
-            font-size: 1.5em;
+            font-size: 1.3em;
             font-weigth: normal;
+            font-style: italic;
             font-family: Arial, sans;
             padding: 0.5em;
             border: none;
             border-radius: 0.5em;
             -moz-border-radius: 0.5em;
             background-color: rgba( 0, 0, 0, 0.1 );
+            cursor: pointer;
         }
 
         .tag {
