--- a/templates/my/handlebars.html
+++ b/templates/my/handlebars.html
@@ -1,26 +1,32 @@
 {% comment %}
+    As the handlebars.js templates are ought to be precompiled and served via
+    static, avoiding the django's native templating.
+
+    This is a temporary development-phase solution to integrate the
+    templates into dynamic pages like my/index.
+
 {% endcomment %}
 
 {% include "header.html" %}
 
 <script>
 $(document).ready( function() {
-
+    /* Fetches the page-context in json */
     $.get(
         "/tag/?format=json",
         function( context ) {
-            /* json dictionary is fetched */
-
+            /*
+                Fetches the template from static repository.
+                This bypasses the native templating.
+            */
             context = { tags: context };
-
             $.get(
                 "/static/javascripts/handlebars/templates/my/index.html",
                 function( source ) {
-                    /* template is fetched */
                     var template = Handlebars.compile( source );
-                    var html = template( context );
+                    var markup = template( context );
 
-                    $(".content").append( html );
+                    $(".content").append( markup );
                 }
             )
         }
