--- a/templates/header/navigation.html
+++ b/templates/header/navigation.html
@@ -14,5 +14,6 @@
         <a class="button" href="/prototype/intrude">Intrude</a>
         <a class="button" href="/prototype/leave">Leave</a>
     </div>
+    <div class="focus"></div>
 </div>
 {% endblock %}
