--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -7,7 +7,7 @@
 @page-background-color:           white;
 @page-left-margin:                10%;
 
-@content-width:                   90%;
+@content-width:                   60%;
 @content-background-color:        white;
 @content-border-color:            rgba( 0, 0, 0, 0.5 );
 @content-border-thickness:        0.2em;
@@ -18,6 +18,7 @@
 @student-font-color:              white;
 @group-background-color:          white;
 @group-font-color:                black;
+@group-color:                     rgb( 230,136,33 );
 
 body {
     /* visuals */
@@ -68,7 +69,7 @@ body {
 
         /* metrics */
         width: @content-width;
-        padding: 2em 3em 2em 2em;
+        padding: 2% 3% 2% 2%;
         text-align: left;
         -moz-border-radius: 0.2em;
         border-radius: 0.2em;
@@ -90,7 +91,7 @@ body {
         border-radius: 0.2em;
         -moz-border-radius: 0.2em;
         cursor: pointer;
-        z-index: 255;
+        z-index: 254;
 
         a {
             text-decoration: none;
@@ -156,9 +157,9 @@ body {
     padding-bottom: 4em;
     border-radius: 0.6em;
     -moz-border-radius: 0.6em;
-    border: 0.08em solid rgba( 242,112,19, 0.5 );
-    border-left: 0.4em solid rgba( 242,112,19, 0.5 );
-    border-right: 0.4em solid rgba( 242,112,19, 0.5 );
+    border: 0.08em solid @group-color;
+    border-left: 0.4em solid @group-color;
+    border-right: 0.4em solid @group-color;
     background-color: white;
     position: relative;
     overflow: auto;
@@ -179,33 +180,29 @@ body {
         position: absolute;
         bottom: 0em;
         left: 0.75em;
-        background-color: rgba( 242,112,19, 0.5 );
+        background-color: @group-color;
         color: white;
         font-size: 1em;
-
-        border-radius: 0.5em 0.5em 0em 0em;
-        -moz-border-radius: 0.5em 0.5em 0em 0em;
-        padding: 0.8em;
+        border-radius: 0.4em 0.4em 0em 0em;
+        -moz-border-radius: 0.4em 0.4em 0em 0em;
+        padding: 0.2em 0.5em 0em 0.5em ;
         width: 80%;
         font-weight: bold;
         white-space: nowrap;
         cursor: pointer;
 
-        @distance-unit: 0.8em;
-
         .control {
+            font-size: 0.8em;
 
-            font-weight: normal;
-            border: 0.3em solid rgb( 242,112,19 );
-            border-radius: 0.5em;
-            -moz-border-radius: 0.5em;
-            font-size: 0.6em;
-            font-style: italic;
-            color: black;
-            background-color: white;
             float: left;
-            padding: (@distance-unit / 2) @distance-unit (@distance-unit / 2) @distance-unit;
-            margin: 0.2em;
+            padding: 0.5em 0.8em 0.5em 0.8em;
+            margin: 0.5em 0.5em 0em 0.5em;
+            -moz-box-shadow: 1px 1px 10px orangered;
+            -webkit-box-shadow: 1px 1px 10px orangered;
+            box-shadow: 1px 1px 10px orangered;
+            background-color: orange;
+            border-radius: 0.4em 0.4em 0em 0em;
+            -moz-border-radius: 0.4em 0.4em 0em 0em;
         }
 
         .control#leave {
@@ -333,55 +330,56 @@ body {
 
 
 .bar {
-    position: fixed;
-    bottom: 1em;
-    right: 1em;
     display: inline;
     float: right;
     border-radius: 0.5em;
     -moz-border-radius: 0.5em;
     padding: 0.5em;
     background-color: #111;
-    z-index: 255;
 
-    .navigation {
+
+
+    .navigation, .status, .focus {
         position: fixed;
-        bottom: 1em;
-        right: 1em;
-        display: inline;
-        float: right;
-        border-radius: 0.5em;
-        -moz-border-radius: 0.5em;
-        padding: 0.5em;
-        background-color: #111;
-
-        a {
-                text-decoration: none;
-                color: #CCC;
-                margin-right: 2em;
-        }
-
-
-    }
-
-    .status {
-        width: 10em;
-        position: fixed;
-        text-align: center;
-        top: 1em;
-        right: 1em;
-        display: inline;
-        float: right;
         border-radius: 0.5em;
         -moz-border-radius: 0.5em;
         padding: 0.5em;
         background-color: #111;
         color: white;
+        z-index: 500;
+    }
+
+
+    @navigation-height: 1em;
+
+    .navigation {
+        bottom: @navigation-height;
+        right: 1em;
+
+        a {
+            text-decoration: none;
+            color: #CCC;
+            margin-right: 2em;
+        }
+    }
+
+    .status {
+        width: 10em;
+        text-align: center;
+        top: 1em;
+        right: 1em;
+
 
         .portrait {
             padding: 0.75em;
         }
+    }
 
+    .focus {
+        bottom: @navigation-height + 2.5em;
+        right: 1em;
+        width: 25%;
+        height: 8em;
     }
 
 }
@@ -404,19 +402,19 @@ body {
         width: auto;
         text-align: left;
         display: block;
-        border: 0.2em solid rgba( 0, 0, 0, 0.1 );
+        border: 0.1em solid rgba( 0, 0, 0, 0.1 );
+        background-color: rgb( 240, 240, 240 );
         padding: 1em;
         padding-top: 3.5em;
         margin: 0.75em;
-        background-color: rgba( 0, 0, 0, 0.05 );
         border-radius: 0.2em;
         -moz-border-radius: 0.2em;
         position: relative;
+        z-index: 50;
 
         .title {
             font-size: 1.5em;
             font-weight: bold;
-            font-family: "Georgia", serif;
             font-style: italic;
             padding: 0em 1em 1em 0em;
             margin: 0em;
