--- a/templates/wish/wishes.html
+++ b/templates/wish/wishes.html
@@ -5,7 +5,9 @@
 <div class="wishes">
 
 {% for wish in wishes|dictsortreversed:"since" %}
-    {% include "wish/wish.html" %}
+    {% if wish.is_active %}
+        {% include "wish/wish.html" %}
+    {% endif %}
 {% endfor %}
 </div>
 {% endblock %}
