--- a/templates/header/navigation.html
+++ b/templates/header/navigation.html
@@ -7,12 +7,7 @@
         <!-- group -->
         <a class="button" href="/group/all">Groups</a>
         <!-- prototype -->
-        <a class="button" href="/prototype/graph">Graph(Group)</a>
-        <a class="button" href="/prototype/generate">Generate</a>
-        <a class="button" href="/prototype/populate">Populate</a>
-        <a class="button" href="/prototype/flush">Flush</a>
-        <a class="button" href="/prototype/intrude">Intrude</a>
-        <a class="button" href="/prototype/leave">Leave</a>
+        <a class="button" href="/login/leave/">Leave</a>
     </div>
     <div class="focus"></div>
 </div>
