--- a/templates/header/import.html
+++ b/templates/header/import.html
@@ -7,36 +7,36 @@
 {% block import %}
 
     <!-- other stylesheets -->
-    <link href="/static/stylesheets/jquery-ui.custom.css" type="text/css" rel="stylesheet" />
-    <link href="/static/stylesheets/tagit.css" type="text/css" rel="stylesheet" />
+    <link href="{{ STATIC_URL }}stylesheets/jquery-ui.custom.css" type="text/css" rel="stylesheet" />
+    <link href="{{ STATIC_URL }}stylesheets/tagit.css" type="text/css" rel="stylesheet" />
 
     <!-- less stylesheets (must be loaded prior to the less.js script!) -->
-    <link href="/static/stylesheets/unifi.less" rel="stylesheet/less" type="text/css" />
-    <link href="/static/stylesheets/my.less" rel="stylesheet/less" type="text/css" />
+    <link href="{{ STATIC_URL }}stylesheets/unifi.less" rel="stylesheet/less" type="text/css" />
+    <link href="{{ STATIC_URL }}stylesheets/my.less" rel="stylesheet/less" type="text/css" />
 
     <!-- less.js scripts -->
-    <script src="/static/javascripts/less.min.js"></script>
+    <script src="{{ STATIC_URL }}javascripts/less.min.js"></script>
 
     <!-- other libraries -->
-    <script src="/static/javascripts/jquery.min.js"></script>
-    <script src="/static/javascripts/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/static/javascripts/handlebars/handlebars.js"></script>
-    <script src="/static/javascripts/tagit.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}javascripts/jquery.min.js"></script>
+    <script src="{{ STATIC_URL }}javascripts/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}javascripts/handlebars/handlebars.js"></script>
+    <script src="{{ STATIC_URL }}javascripts/tagit.js" type="text/javascript" charset="utf-8"></script>
 
 
     {% if graph %}
         <!-- dracula dependencies -->
-        <script src="/static/javascripts/dracula/Curry-1.0.1.js"></script>
-        <script src="/static/javascripts/dracula/raphael-min.js"></script>
-        <script src="/static/javascripts/dracula/dracula_graffle.js"></script>
-        <script src="/static/javascripts/dracula/seedrandom.js"></script>
-        <script src="/static/javascripts/dracula/dracula_graph.js"></script>
-        <script src="/static/javascripts/dracula/dracula_algorithms.js"></script>
+        <script src="{{ STATIC_URL }}javascripts/dracula/Curry-1.0.1.js"></script>
+        <script src="{{ STATIC_URL }}javascripts/dracula/raphael-min.js"></script>
+        <script src="{{ STATIC_URL }}javascripts/dracula/dracula_graffle.js"></script>
+        <script src="{{ STATIC_URL }}javascripts/dracula/seedrandom.js"></script>
+        <script src="{{ STATIC_URL }}javascripts/dracula/dracula_graph.js"></script>
+        <script src="{{ STATIC_URL }}javascripts/dracula/dracula_algorithms.js"></script>
     {% endif %}
 
     <!-- project specific scripts -->
-    <script src="/static/javascripts/django-csrf.js"></script>
-    <script src="/static/javascripts/unifi.js"></script>
+    <script src="{{ STATIC_URL }}javascripts/django-csrf.js"></script>
+    <script src="{{ STATIC_URL }}javascripts/unifi.js"></script>
 
 
 
