--- a/templates/wish/my.html
+++ b/templates/wish/my.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+{% for wish in wishes %}
+{% include "wishes.html" %}
+{% endfor %}
