--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="login_overlay">
+<div class="login">
     <form method="POST" action="/login/enter/">{% csrf_token %}
         <div class="row">
             <label for="username">Brukernavn</label>
