--- a/templates/student/all.html
+++ b/templates/student/all.html
@@ -1,6 +1,8 @@
+{% extends "base.html" %}
+
 {% comment %}
 {% endcomment %}
 
-{% include "header.html" %}
+{% block content %}
 {% include "student/students.html" %}
-{% include "footer.html" %} 
+{% endblock %}
