--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -1,13 +1,7 @@
-/*
-    Global style options
-*/
-
-
-/* structural elements */
 @page-background-color:           white;
-@page-left-margin:                10%;
+@page-left-margin:                6%;
 
-@content-width:                   60%;
+@content-width:                   70%;
 @content-background-color:        white;
 @content-border-color:            rgba( 0, 0, 0, 0.5 );
 @content-border-thickness:        0.2em;
@@ -21,53 +15,18 @@
 @group-color:                     rgb( 230,136,33 );
 
 body {
-    /* visuals */
     font-family: Arial, sans-serif;
     background-color: @page-background-color;
     background-image: url("http://subtlepatterns.com/patterns/lghtmesh.png");
-
-    /* metrics */
     padding: 1.5em 3em 1.5em @page-left-margin;
     padding-left: @page-left-margin;
 
-    a {
-        color: rgb( 192, 128, 64 );
-    }
-
-    h1 {
-        font-family: "Georgia", serif;
-        font-style: italic;
-        padding: 0em 1em 1em 0em;
-    }
-
-    h2 {
-        font-family: "Georgia", serif;
-        font-style: italic;
-        padding: 0em 1em 1em 0em;
-        margin: 0em;
-    }
-
-    h3 {
-        font-family: "Georgia", serif;
-        font-style: italic;
-        padding: 0em 1em 1em 0em;
-        margin: 0em;
-    }
-
-    .logo {
-        font-size: 4em;
-        font-weight: bold;
-        font-family: sans-serif;
-    }
-
-
     .content {
-        /* visuals */
+
         border: @content-border-thickness solid @content-border-color;
         background-color: @content-background-color;
         /*-webkit-box-shadow: 0em 0.3em 0.3em 0.3em rgba( 0, 0, 0, 0.25 );*/
 
-        /* metrics */
         width: @content-width;
         padding: 2% 3% 2% 2%;
         text-align: left;
@@ -77,32 +36,15 @@ body {
 }
 
 .controls {
-    top: 0.2em;
-    right: 0.2em;
+    top: 0.5em;
+    right: 0.5em;
     position: absolute;
 
     .control {
-        display: inline-block;
         position: relative;
-        padding: 0.2em;
-        font-size: 0.8em;
-        padding: 0.25em;
-        background-color: rgba( 0, 0, 0, 0.1 );
-        border-radius: 0.2em;
-        -moz-border-radius: 0.2em;
         cursor: pointer;
         z-index: 254;
-
-        a {
-            text-decoration: none;
-            color: black;
-        }
-
     }
-
-    .control#leave {}
-
-    .control#inspect {}
 
 }
 
@@ -111,186 +53,99 @@ body {
 */
 
 .student {
-    background-color: @student-background-color;
-    color: @student-font-color;
-    font-size: 1.2em;
-    font-style: italic;
     display: inline-block;
-    text-decoration: underline;
     cursor: pointer;
-
+    background-color: @student-background-color;
     margin: 0.1em;
     padding: 0.4em 0.75em 0.4em 0.75em;
     border-radius: 0em 0.4em 0em 0.4em;
     -moz-border-radius: 0em 0.4em 0em 0.4em;
     white-space: nowrap;
+
+    .name {
+        color: @student-font-color;
+        text-decoration: underline;
+        font-size: 1.2em;
+        font-style: italic;
+    }
+
+    .badges {
+        padding-left: 0.4em;
+    }
+
 }
 
 .wish {
+
     border-radius: 0.2em;
     -moz-border-radius: 0.2em;
     padding: 0.5em 2em 0.5em 0.5em;
     margin: 0.5em;
     border: 0.08em dotted rgba( 0, 0, 0, 0.15 );
-    position: relative;
     background-color: white;
+    position: relative;
 
-    .delete {
-        width: 1.5em;
-        text-align: center;
-        position: absolute;
-        display: inline-block;
+    .actions {
+        cursor: pointer;
         top: 0.2em;
-        right: 0.2em;
-        font-size: 0.8em;
-        padding: 0.25em;
-        background-color: rgba( 0, 0, 0, 0.1 );
-        border-radius: 0.2em;
-        -moz-border-radius: 0.2em;
-        cursor: pointer;
-    }
-}
-
-.login {
-
-    label {
-        color: white;
-        font-size: 0.7em;
-        float: left;
-    }
-
-    div {
-        text-align: right;
-    }
-
-    input[type=text], input[type=password] {
-        border: none;
-        background-color: rgba( 255, 255, 255, 0.12 );
-        color: white;
-        font-style: italic;
-        border-radius: 0.3em;
-        -moz-border-radius: 0.3em;
-        padding: 0.3em;
-    }
-
-}
-
-.login_overlay {
-
-    font-size: 1.2em;
-    text-align: center;
-    /* margin: 10% 40% 5% 15%; */
-    border-radius: 1em;
-    -moz-border-radius: 1em;
-    padding: 3.75em 2.2em 5em 2.2em;
-    background-color: rgba( 66, 66, 66, 0.25 );
-    border: 0.4em solid rgba( 66, 66, 66, 0.40 );
-    -moz-box-shadow: 1px 1px 10px rgb( 128, 128, 128 );
-    -webkit-box-shadow: 1px 1px 10px rgb( 128, 128, 128 );
-    box-shadow: 1px 1px 10px rgb( 128, 128, 128 );
-    position: fixed;
-    z-index: 255;
-    top: 10%;
-    left: 15%;
-
-    input {
-        border: none;
-        font-size: 1.2em;
-        padding: 0.4em;
-        padding-top: 0.5em;
-        border-radius: 0.2em;
-        -moz-border-radius: 0.2em;
-        border: 2pt solid rgb( 128, 128, 128 );
-
-    }
-
-    input {
-        font-style: italic;
-    }
-
-    input[type=text], input[type=password] {
-        width: 97%;
-        border-bottom: 5pt solid rgb( 128, 128, 128 );
-    }
-
-    input[type=submit] {
-        padding: 0.4em 1.4em 0.4em 1.4em;
-        border-radius: 0.8em;
-        -moz-border-radius: 0.8em;
-        color: rgb( 0, 128, 0 );
-        cursor: pointer;
-    }
-
-    .row {
-        padding-bottom: 1em;
-        text-align: left;
-    }
-
-    .right {
-        text-align: right;
-    }
-
-    label {
-        font-size: 0.8em;
-        color: white;
-        padding: 0.4em 0.8em 1em 0.8em;
-        background-color: rgb( 128, 128, 128 );
-        border-radius: 0.4em 0.4em 0em 0em;
-        -moz-border-radius: 0.4em 0.4em 0em 0em;
+        right: 0.4em;
+        position: absolute;
+        z-index: 254;
     }
 
 }
 
 .group {
+
+    background-color: white;
+    border: 0.08em solid @group-color;
+    border-left: 0.4em solid @group-color;
+    border-right: 0.4em solid @group-color;
     margin: 0.5em;
     padding: 0.75em 0.75em 0.75em 0.75em;
     padding-bottom: 4em;
     border-radius: 0.6em;
     -moz-border-radius: 0.6em;
-    border: 0.08em solid @group-color;
-    border-left: 0.4em solid @group-color;
-    border-right: 0.4em solid @group-color;
-    background-color: white;
     position: relative;
     overflow: auto;
 
     .number {
+        color: rgba( 0, 0, 0, 0.1 );
         position: absolute;
-        bottom: 0.3em;
-        right: 0.3em;
+        bottom: 0.6em;
+        right: 0.4em;
         float: right;
         font-size: 2.8em;
         font-style: italic;
-        font-family: "Georgia", serif;
+        /* font-family: "Georgia", serif; */
         font-weight: bold;
-        color: rgba( 0, 0, 0, 0.1 );
     }
 
     .menu {
+        background-color: @group-color;
+        color: white;
         position: absolute;
         bottom: 0em;
         left: 0.75em;
-        background-color: @group-color;
-        color: white;
         font-size: 1em;
         border-radius: 0.4em 0.4em 0em 0em;
         -moz-border-radius: 0.4em 0.4em 0em 0em;
-        padding: 0.2em 0.5em 0em 0.5em ;
+        padding: 0.2em 0.5em 0em 0.5em;
         width: 80%;
         font-weight: bold;
         white-space: nowrap;
+        display: none;
         cursor: pointer;
 
         .control {
+            background-color: orange;
             font-size: 0.8em;
-
             float: left;
             padding: 0.5em 0.8em 0.5em 0.8em;
             margin: 0.5em 0.5em 0em 0.5em;
             -moz-box-shadow: 1px 1px 10px orangered;
             -webkit-box-shadow: 1px 1px 10px orangered;
             box-shadow: 1px 1px 10px orangered;
-            background-color: orange;
             border-radius: 0.4em 0.4em 0em 0em;
             -moz-border-radius: 0.4em 0.4em 0em 0em;
         }
@@ -303,25 +158,14 @@ body {
 
 }
 
-
-
-
-.oracle {
-    display: inline-block;
-    padding: 0.4em 0.4em 0.4em 0.4em;
-    background-color: rgba(200, 100, 50, 0.25);
-    border-radius: 0.2em;
-    -moz-border-radius: 0.2em;
-}
-
 .tag {
+    background-color: @tag-background-color;
+    color: @tag-font-color;
     display: inline-block;
     padding: 0.4em 0.4em 0.4em 0.4em;
     margin: 0.15em;
     border: none;
     white-space: nowrap; /* important */
-    background-color: @tag-background-color;
-    color: @tag-font-color;
 
     border-radius: 0.2em;
     -moz-border-radius: 0.2em;
@@ -336,104 +180,130 @@ body {
 }
 
 
+.login {
 
+    background-color: rgba( 66, 66, 66, 0.25 );
+    border: 0.4em solid rgba( 66, 66, 66, 0.40 );
+    font-size: 1.2em;
+    text-align: center;
+/* margin: 10% 40% 5% 15%; */
+    border-radius: 1em;
+    -moz-border-radius: 1em;
+    padding: 3.75em 2.2em 5em 2.2em;
+    -moz-box-shadow: 1px 1px 10px rgb( 128, 128, 128 );
+    -webkit-box-shadow: 1px 1px 10px rgb( 128, 128, 128 );
+    box-shadow: 1px 1px 10px rgb( 128, 128, 128 );
+    position: fixed;
+    z-index: 255;
+    top: 10%;
+    left: 15%;
 
-/* containers */
-
-    .students {}
-
-    .wishes {}
-
-    .tags {
-        .tag {
-            display: inline-block;
-            padding: 0.4em 0.4em 0.4em 0.4em;
-            margin: 0.3em 0em 0.3em 0em;
-            border: none;
-
-            border-radius: 0.2em;
-            -moz-border-radius: 0.2em;
-            cursor: pointer;
-        }
+    input {
+        border: 2pt solid rgb( 128, 128, 128 );
+        font-size: 1.2em;
+        padding: 0.4em;
+        padding-top: 0.5em;
+        border-radius: 0.2em;
+        -moz-border-radius: 0.2em;
     }
 
-
-    .oracles {}
-    .groups{
-        overflow: hidden;
-
-        .leave {
-            float: right;
-        }
+    input {
+        font-style: italic;
     }
 
-/* creation forms */
-
-    .new_wish {
-        text-align: center;
-
-        input[type="submit"] {
-            font-weight: bold;
-            width: 90%;
-        }
+    input[type=text], input[type=password] {
+        border-bottom: 5pt solid rgb( 128, 128, 128 );
+        width: 97%;
     }
 
+    input[type=submit] {
+        color: rgb( 0, 128, 0 );
+        padding: 0.4em 1.4em 0.4em 1.4em;
+        border-radius: 0.8em;
+        -moz-border-radius: 0.8em;
+        cursor: pointer;
+    }
 
+    .row {
+        padding-bottom: 1em;
+        text-align: left;
+    }
 
-/*
-    Control-specific applications
-*/
+    .right {
+        text-align: right;
+    }
 
-.match {}
-
-.prototype {}
-
-.util {
-
-    .login {}
-
-    .communication {}
+    label {
+        background-color: rgb( 128, 128, 128 );
+        font-size: 0.8em;
+        color: white;
+        padding: 0.4em 0.8em 1em 0.8em;
+        border-radius: 0.4em 0.4em 0em 0em;
+        -moz-border-radius: 0.4em 0.4em 0em 0em;
+    }
 
 }
 
+/* Containers */
 
-/*
-    View-specific applications
-*/
+.students {}
+
+.wishes {}
+
+.tags {
+
+    .tag {
+        display: inline-block;
+        padding: 0.4em 0.4em 0.4em 0.4em;
+        margin: 0.3em 0em 0.3em 0em;
+        border: none;
+
+        border-radius: 0.2em;
+        -moz-border-radius: 0.2em;
+        cursor: pointer;
+    }
+}
+
+.groups {
+
+    overflow: hidden;
+
+}
+
+/* Creation forms */
+
+.new_wish {
+
+    text-align: center;
+
+    input[type="submit"] {
+        font-weight: bold;
+        width: 90%;
+    }
+}
+
+
+
+/* Control-specific applications */
 
 .my {}
 
 
-
-
-/*
-    Various
-*/
-
-
-.oracle_badge {}
-
-.bubble {
-    float: left;
-}
-
-
+/* General interface elements */
 
 .bar {
     display: inline;
     float: right;
 
     .navigation, .status, .focus {
+        background-color: #111;
+        color: white;
         position: fixed;
         border-radius: 0.5em;
         -moz-border-radius: 0.5em;
         padding: 0.5em;
-        background-color: #111;
-        color: white;
         z-index: 500;
     }
-
-
 
     @navigation-height: 1em;
     .navigation {
@@ -441,8 +311,8 @@ body {
         right: 1em;
 
         a {
-            text-decoration: none;
             color: #CCC;
+            text-decoration: none;
             margin-right: 2em;
         }
     }
@@ -469,49 +339,49 @@ body {
 }
 
 .graph {
+    background-color: rgba( 0, 0, 0, 0.1 );
     margin: 1em;
     text-align: center;
-    background-color: rgba( 0, 0, 0, 0.1 );
     border: 0.08em dotted rgba( 0, 0, 0, 0.1 );
-}
-
-.greeting {
-    padding: 1em;
 }
 
 .column_container {
 
 
     .column {
+
+        background-color: rgb( 240, 240, 240 );
+        border: 0.1em solid rgba( 0, 0, 0, 0.1 );
+
         width: auto;
         text-align: left;
         display: block;
-        border: 0.1em solid rgba( 0, 0, 0, 0.1 );
-        background-color: rgb( 240, 240, 240 );
         padding: 1em;
-        padding-top: 3.5em;
         margin: 0.75em;
         border-radius: 0.2em;
         -moz-border-radius: 0.2em;
-        position: relative;
+
         z-index: 50;
 
+
+        /* #[-] remove
         .title {
-            font-size: 1.5em;
-            font-weight: bold;
-            font-style: italic;
-            padding: 0em 1em 1em 0em;
-            margin: 0em;
-            border-radius: 0em 0em 0em 0.5em;
-            -moz-border-radius: 0em 0em 0em 0.5em;
+
             background-color: rgba( 0, 0, 0, 0.1 );
-            padding: 0.5em;
+
+            font-size: 1.2em;
+            padding: 0.25em 1.2em 0.25em 1.2em;
+            margin: 0em;
+            border-radius: 0em 0em 0em 0.3em;
+            -moz-border-radius: 0em 0em 0em 0.3em;
+
             position: absolute;
             top: 0;
             right: 0;
             clear: both;
 
         }
+        */
 
     }
 
@@ -521,7 +391,6 @@ body {
                         
             border: 0.1em solid rgba( 255, 0, 0, 0.5 );
             border-bottom: 0.25em solid rgba( 192, 0, 0, 1 );
-            background-image: url( 'http://subtlepatterns.com/patterns/light_noise_diagonal.png' );
             padding: 0.4em;
             cursor: text;
             
@@ -538,6 +407,8 @@ body {
         }
         
         input[type=submit] {
+            background-color: rgba( 0, 0, 0, 0.1 );
+
             font-size: 1.3em;
             font-weigth: normal;
             font-style: italic;
@@ -546,7 +417,6 @@ body {
             border: none;
             border-radius: 0.5em;
             -moz-border-radius: 0.5em;
-            background-color: rgba( 0, 0, 0, 0.1 );
             cursor: pointer;
         }
 
@@ -560,10 +430,6 @@ body {
 
     }
 
-    .column#oracle {
-        clear: both;
-    }
-
     .help {
         font-size: 0.8em;
         padding-right: 1em;
@@ -574,4 +440,21 @@ body {
         font-style: italic;
     }
 
+}
+
+.assistance_search {
+
+    margin: 0.5em;
+
+    input {
+        width: 97%;
+        font-style: italic;
+        border-radius: 0.5em;
+        -moz-border-radius: 0.5em;
+        border: 0.2em solid rgb( 216, 0, 0 );
+        border: 0.1em solid rgba( 255, 0, 0, 0.5 );
+        border-bottom: 0.25em solid rgba( 192, 0, 0, 1 );
+        padding: 0.4em;
+        cursor: text;
+    }
 }
