--- a/templates/header/import.html
+++ b/templates/header/import.html
@@ -6,10 +6,6 @@
 
 {% block import %}
 
-    <!-- other stylesheets -->
-    <link href="{{ STATIC_URL }}stylesheets/jquery-ui.custom.css" type="text/css" rel="stylesheet" />
-    <link href="{{ STATIC_URL }}stylesheets/tagit.css" type="text/css" rel="stylesheet" />
-
     <!-- less stylesheets (must be loaded prior to the less.js script!) -->
     <link href="{{ STATIC_URL }}stylesheets/unifi.less" rel="stylesheet/less" type="text/css" />
     <link href="{{ STATIC_URL }}stylesheets/my.less" rel="stylesheet/less" type="text/css" />
@@ -20,8 +16,8 @@
     <!-- other libraries -->
     <script src="{{ STATIC_URL }}javascripts/jquery.min.js"></script>
     <script src="{{ STATIC_URL }}javascripts/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="{{ STATIC_URL }}javascripts/handlebars/handlebars.js"></script>
     <script src="{{ STATIC_URL }}javascripts/tagit.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}javascripts/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 
 
     {% if graph %}
@@ -39,5 +35,11 @@
     <script src="{{ STATIC_URL }}javascripts/unifi.js"></script>
 
 
+    <!-- other stylesheets -->
+    <link href="{{ STATIC_URL }}stylesheets/jquery-ui.custom.css" type="text/css" rel="stylesheet" />
+    <link href="{{ STATIC_URL }}stylesheets/tagit.css" type="text/css" rel="stylesheet" />
+    <link href="{{ STATIC_URL }}stylesheets/tagit.css" type="text/css" rel="stylesheet" />
+    <link href="{{ STATIC_URL }}stylesheets/bootstrap-responsive.min.css" type="text/css" rel="stylesheet" />
+    <link href="{{ STATIC_URL }}stylesheets/bootstrap.min.css" type="text/css" rel="stylesheet" />
 
 {% endblock %}
