--- a/templates/tag/all.html
+++ b/templates/tag/all.html
@@ -1,6 +1,9 @@
+{% extends "base.html" %}
+
 {% comment %}
 {% endcomment %}
 
-{% include "header.html" %}
+{% block content %}
 {% include "tag/tags.html" %}
-{% include "footer.html" %} 
+{% endblock %}
+
