--- a/templates/group/group.html
+++ b/templates/group/group.html
@@ -14,12 +14,12 @@
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a id="inspect">Se på</a></li>
-                    <li><a id="contact">Kontakt</a></li>
-                    <li><a id="require_assistance">Hjelp</a></li>
+                    <li><a id="inspect"><i class="icon-eye-open pull-right"></i>Se på</a></li>
+                    <li><a id="contact"><i class="icon-envelope pull-right"></i>Kontakt</a></li>
+                    <li><a id="require_assistance"><i class="icon-question-sign pull-right"></i>Hjelp</a></li>
                 </ul>
             </div>
-            <button class="btn btn-mini pull-right" id="leave">Meld deg av</button>
+            <button class="btn btn-warning btn-mini pull-right" id="leave">Meld deg av</button>
         </div>
     </div>
     {% endif %}
